# axum-basic-server

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/users/: mod.rs  users_model.rs  users_router.rs
tests/: health_router.rs  helpers.rs  users_router.rs
