[package]
name = "rust-axum-deployment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
hyper = { version = "0.14.26", features = ["client"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
asserhttp = { version = "0.6.1", features = ["reqwest"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
